Avoid flex gap

--- a/index/main.css
+++ b/index/main.css
@@ -34,7 +34,10 @@ a:hover {
 .header .links {
   display: flex;
   align-items: center;
-  gap: 2em;
+}
+
+.header .links > * {
+  margin-left: 2em;
 }
 
 .content {
